@@ -34,38 +34,37 @@ extern "C" {
 #define EQUAL		22
 #define DOT		23
 #define PERCENT		24
-/* #define BACKQUOTE	25 */
-#define LBRACE		26
-#define RBRACE		27
-#define EQEQUAL		28
-#define NOTEQUAL	29
-#define LESSEQUAL	30
-#define GREATEREQUAL	31
-#define TILDE		32
-#define CIRCUMFLEX	33
-#define LEFTSHIFT	34
-#define RIGHTSHIFT	35
-#define DOUBLESTAR	36
-#define PLUSEQUAL	37
-#define MINEQUAL	38
-#define STAREQUAL	39
-#define SLASHEQUAL	40
-#define PERCENTEQUAL	41
-#define AMPEREQUAL	42
-#define VBAREQUAL	43
-#define CIRCUMFLEXEQUAL	44
-#define LEFTSHIFTEQUAL	45
-#define RIGHTSHIFTEQUAL	46
-#define DOUBLESTAREQUAL	47
-#define DOUBLESLASH	48
-#define DOUBLESLASHEQUAL 49
-#define AT              50	
-#define RARROW          51
-#define ELLIPSIS        52
+#define LBRACE		25
+#define RBRACE		26
+#define EQEQUAL		27
+#define NOTEQUAL	28
+#define LESSEQUAL	29
+#define GREATEREQUAL	30
+#define TILDE		31
+#define CIRCUMFLEX	32
+#define LEFTSHIFT	33
+#define RIGHTSHIFT	34
+#define DOUBLESTAR	35
+#define PLUSEQUAL	36
+#define MINEQUAL	37
+#define STAREQUAL	38
+#define SLASHEQUAL	39
+#define PERCENTEQUAL	40
+#define AMPEREQUAL	41
+#define VBAREQUAL	42
+#define CIRCUMFLEXEQUAL	43
+#define LEFTSHIFTEQUAL	44
+#define RIGHTSHIFTEQUAL	45
+#define DOUBLESTAREQUAL	46
+#define DOUBLESLASH	47
+#define DOUBLESLASHEQUAL 48
+#define AT              49	
+#define RARROW          50
+#define ELLIPSIS        51
 /* Don't forget to update the table _PyParser_TokenNames in tokenizer.c! */
-#define OP		53
-#define ERRORTOKEN	54
-#define N_TOKENS	55
+#define OP		52
+#define ERRORTOKEN	53
+#define N_TOKENS	54
 
 /* Special definitions for cooperation with parser */
 
